--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6918,3 +6918,420 @@ h6,
 #menu-o2 .close-icon::after {
   background-color: #ffffff;
 }
+#menu-ox .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-ox .navbar-caption {
+  color: #ffffff;
+}
+#menu-ox .navbar-toggler {
+  color: #ffffff;
+}
+#menu-ox .link,
+#menu-ox .dropdown-item {
+  color: #ffffff;
+}
+#menu-ox .link {
+  font-size: 0.75rem;
+}
+#menu-ox .dropdown-item,
+#menu-ox .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-ox .link:hover,
+#menu-ox .dropdown-item:hover,
+#menu-ox .link:focus,
+#menu-ox .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-ox .link[aria-expanded="true"],
+#menu-ox .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-ox .nav-dropdown-sm .link:focus,
+#menu-ox .nav-dropdown-sm .link:hover,
+#menu-ox .nav-dropdown-sm .dropdown-item:focus,
+#menu-ox .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-ox .navbar,
+#menu-ox .nav-dropdown-sm,
+#menu-ox .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-ox .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-ox .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-ox .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-ox .bg-color.transparent.opened .link:hover,
+#menu-ox .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-ox .link[aria-expanded="true"],
+#menu-ox .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-ox.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-ox .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-ox .close-icon::before,
+#menu-ox .close-icon::after {
+  background-color: #ffffff;
+}
+#header3-p4 .mbr-section-title,
+#header3-p4 .mbr-section-subtitle {
+  text-align: center;
+}
+#menu-p1 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-p1 .navbar-caption {
+  color: #ffffff;
+}
+#menu-p1 .navbar-toggler {
+  color: #ffffff;
+}
+#menu-p1 .link,
+#menu-p1 .dropdown-item {
+  color: #ffffff;
+}
+#menu-p1 .link {
+  font-size: 0.75rem;
+}
+#menu-p1 .dropdown-item,
+#menu-p1 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-p1 .link:hover,
+#menu-p1 .dropdown-item:hover,
+#menu-p1 .link:focus,
+#menu-p1 .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-p1 .link[aria-expanded="true"],
+#menu-p1 .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-p1 .nav-dropdown-sm .link:focus,
+#menu-p1 .nav-dropdown-sm .link:hover,
+#menu-p1 .nav-dropdown-sm .dropdown-item:focus,
+#menu-p1 .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-p1 .navbar,
+#menu-p1 .nav-dropdown-sm,
+#menu-p1 .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-p1 .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-p1 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-p1 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-p1 .bg-color.transparent.opened .link:hover,
+#menu-p1 .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-p1 .link[aria-expanded="true"],
+#menu-p1 .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-p1.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-p1 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-p1 .close-icon::before,
+#menu-p1 .close-icon::after {
+  background-color: #ffffff;
+}
+#header3-p6 .mbr-section-title,
+#header3-p6 .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-p8 .mbr-section-title,
+#header3-p8 .mbr-section-subtitle {
+  text-align: center;
+}
+#msg-box2-q0 .mbr-section-title {
+  color: #fff;
+}
+#msg-box2-q0 .mbr-section-subtitle {
+  color: #a0a0a0;
+}
+#header1-pc .mbr-section-title {
+  color: #e25041;
+}
+#header1-pc .mbr-section-lead {
+  color: #e25041;
+}
+#menu-pa .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-pa .navbar-caption {
+  color: #ffffff;
+}
+#menu-pa .navbar-toggler {
+  color: #ffffff;
+}
+#menu-pa .link,
+#menu-pa .dropdown-item {
+  color: #ffffff;
+}
+#menu-pa .link {
+  font-size: 0.75rem;
+}
+#menu-pa .dropdown-item,
+#menu-pa .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-pa .link:hover,
+#menu-pa .dropdown-item:hover,
+#menu-pa .link:focus,
+#menu-pa .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-pa .link[aria-expanded="true"],
+#menu-pa .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-pa .nav-dropdown-sm .link:focus,
+#menu-pa .nav-dropdown-sm .link:hover,
+#menu-pa .nav-dropdown-sm .dropdown-item:focus,
+#menu-pa .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-pa .navbar,
+#menu-pa .nav-dropdown-sm,
+#menu-pa .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-pa .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-pa .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-pa .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-pa .bg-color.transparent.opened .link:hover,
+#menu-pa .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-pa .link[aria-expanded="true"],
+#menu-pa .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-pa.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-pa .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-pa .close-icon::before,
+#menu-pa .close-icon::after {
+  background-color: #ffffff;
+}
+#header3-pd .mbr-section-title,
+#header3-pd .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-pf .mbr-section-title,
+#header3-pf .mbr-section-subtitle {
+  text-align: center;
+}
+#msg-box2-pz .mbr-section-title {
+  color: #fff;
+}
+#msg-box2-pz .mbr-section-subtitle {
+  color: #a0a0a0;
+}
+#header1-pj .mbr-section-title {
+  color: #ffffff;
+}
+#header1-pj .mbr-section-lead {
+  color: #ffffff;
+}
+#header3-pk .mbr-section-title,
+#header3-pk .mbr-section-subtitle {
+  text-align: center;
+}
+#menu-ph .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-ph .navbar-caption {
+  color: #ffffff;
+}
+#menu-ph .navbar-toggler {
+  color: #ffffff;
+}
+#menu-ph .link,
+#menu-ph .dropdown-item {
+  color: #ffffff;
+}
+#menu-ph .link {
+  font-size: 0.75rem;
+}
+#menu-ph .dropdown-item,
+#menu-ph .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-ph .link:hover,
+#menu-ph .dropdown-item:hover,
+#menu-ph .link:focus,
+#menu-ph .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-ph .link[aria-expanded="true"],
+#menu-ph .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-ph .nav-dropdown-sm .link:focus,
+#menu-ph .nav-dropdown-sm .link:hover,
+#menu-ph .nav-dropdown-sm .dropdown-item:focus,
+#menu-ph .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-ph .navbar,
+#menu-ph .nav-dropdown-sm,
+#menu-ph .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-ph .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-ph .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-ph .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-ph .bg-color.transparent.opened .link:hover,
+#menu-ph .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-ph .link[aria-expanded="true"],
+#menu-ph .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-ph.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-ph .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-ph .close-icon::before,
+#menu-ph .close-icon::after {
+  background-color: #ffffff;
+}
+#header3-pm .mbr-section-title,
+#header3-pm .mbr-section-subtitle {
+  text-align: center;
+}
+#msg-box2-px .mbr-section-title {
+  color: #fff;
+}
+#msg-box2-px .mbr-section-subtitle {
+  color: #a0a0a0;
+}
+#header1-pq .mbr-section-title {
+  color: #b8312f;
+}
+#header1-pq .mbr-section-lead {
+  color: #b8312f;
+}
+#header3-pr .mbr-section-title,
+#header3-pr .mbr-section-subtitle {
+  text-align: center;
+}
+#menu-po .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-po .navbar-caption {
+  color: #ffffff;
+}
+#menu-po .navbar-toggler {
+  color: #ffffff;
+}
+#menu-po .link,
+#menu-po .dropdown-item {
+  color: #ffffff;
+}
+#menu-po .link {
+  font-size: 0.75rem;
+}
+#menu-po .dropdown-item,
+#menu-po .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-po .link:hover,
+#menu-po .dropdown-item:hover,
+#menu-po .link:focus,
+#menu-po .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-po .link[aria-expanded="true"],
+#menu-po .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-po .nav-dropdown-sm .link:focus,
+#menu-po .nav-dropdown-sm .link:hover,
+#menu-po .nav-dropdown-sm .dropdown-item:focus,
+#menu-po .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-po .navbar,
+#menu-po .nav-dropdown-sm,
+#menu-po .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-po .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-po .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-po .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-po .bg-color.transparent.opened .link:hover,
+#menu-po .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-po .link[aria-expanded="true"],
+#menu-po .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-po.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-po .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-po .close-icon::before,
+#menu-po .close-icon::after {
+  background-color: #ffffff;
+}
+#header3-pt .mbr-section-title,
+#header3-pt .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-pv .mbr-section-title,
+#header3-pv .mbr-section-subtitle {
+  text-align: center;
+}
+#msg-box2-py .mbr-section-title {
+  color: #fff;
+}
+#msg-box2-py .mbr-section-subtitle {
+  color: #a0a0a0;
+}
